--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,27 +1,36 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.119.16:3306/test
-    username: root
-    password: root
-    type: com.alibaba.druid.pool.DruidDataSource
+    main:
+      driver-class-name: com.mysql.jdbc.Driver
+      url: jdbc:mysql://192.168.119.16:3306/test
+      username: root
+      password: root
+      type: com.alibaba.druid.pool.DruidDataSource
+    shard:
+      url-1: jdbc:mysql://192.168.119.16:3306/test_0
+      url-2: jdbc:mysql://192.168.119.16:3306/test_1
+      username: root
+      password: root
+      initial-size: 3
+      min-idle: 3
+      max-active: 100
 
-    #druid
-    initialSize: 5
-    minIdle: 5
-    maxActive: 20
-    maxWait: 60000
-    timeBetweenEvictionRunsMillis: 60000
-    minEvictableIdleTimeMillis: 300000
-    validationQuery: SELECT 1 FROM DUAL
-    testWhileIdle: true
-    testOnBorrow: false
-    testOnReturn: false
-    poolPreparedStatements: true
-
-    filters: stat,wall,log4j
-    maxPoolPreparedStatementPerConnectionSize: 20
-    useGlobalDataSourceStat: true
+      #druid
+#      initialSize: 5
+#      minIdle: 5
+#      maxActive: 20
+#      maxWait: 60000
+#      timeBetweenEvictionRunsMillis: 60000
+#      minEvictableIdleTimeMillis: 300000
+#      validationQuery: SELECT 1 FROM DUAL
+#      testWhileIdle: true
+#      testOnBorrow: false
+#      testOnReturn: false
+#      poolPreparedStatements: true
+#
+#      filters: stat,wall,log4j
+#      maxPoolPreparedStatementPerConnectionSize: 20
+#      useGlobalDataSourceStat: true
   elasticsearch:
     rest:
       uris: 192.168.119.16:9200
